--- a/scss/_topics.scss
+++ b/scss/_topics.scss
@@ -42,34 +42,8 @@
   -webkit-box-shadow: 0px 2px 15px -2px rgba(0, 0, 0, 0);
   -moz-box-shadow: 0px 2px 15px -2px rgba(0, 0, 0, 0);
   box-shadow: 0px 2px 15px -2px rgba(0, 0, 0, 0);
-
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#87e0fd+0,5b7da8+0,746898+100 */
-  background-position: 100px;
-  background: #87e0fd;
-
-  /* Old browsers */
-  background: -moz-linear-gradient(-45deg, #87e0fd 0%, #5b7da8 0%, #746898 100%);
-
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #87e0fd), color-stop(0%, #5b7da8), color-stop(100%, #746898));
-
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(-45deg, #87e0fd 0%, #5b7da8 0%, #746898 100%);
-
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(-45deg, #87e0fd 0%, #5b7da8 0%, #746898 100%);
-
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(-45deg, #87e0fd 0%, #5b7da8 0%, #746898 100%);
-
-  /* IE10+ */
-  background: linear-gradient(135deg, #87e0fd 0%, #5b7da8 0%, #746898 100%);
-
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#87e0fd', endColorstr='#746898', GradientType=1 );
-
-  /* IE6-9 fallback on horizontal gradient */
-  &:hover {
+  background: white;
+   &:hover {
     -webkit-box-shadow: 0px 2px 15px -2px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 2px 15px -2px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 2px 15px -2px rgba(0, 0, 0, 0.3);
@@ -99,18 +73,6 @@
     padding-top: 100%;
 
     /* initial ratio of 1:1*/
-  }
-
-  & .white-block {
-    background-color: white;
-    height: 500px;
-    width: 500px;
-    position: absolute;
-    top: 0%;
-    left: -154px;
-    transform: rotate(45deg);
-    transition: all 0.4s cubic-bezier(0.68, 0.33, 0.04, 0.89);
-    box-shadow: 0 0 75px 40px white;
   }
 
   .topic {
@@ -174,11 +136,7 @@
   }
 
   &.topic-selected {
-    .white-block {
-      left: -259%;
-      top: -650px;
-    }
-
+    @include linear-gradient(#5b7da8, #746898);
     p {
       color: white;
     }
@@ -240,15 +198,7 @@
   }
 }
 
-.topic-container {
-  transform-style: preserve-3d;
-  transform: perspective(600) translateZ(0px);
 
-  &:active {
-    transform: perspective(600) translateZ(-50px);
-  }
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
 
 
 
